--- a/js-up.html
+++ b/js-up.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>目录</title>
+		<title>上卷：锋利的武器-jQuery</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -29,18 +29,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<!-- 目录 -->
 				<section>
-					<h1>目录</h1>
-					<p>
-						<ul>
-							<li class="fragment"><a href="js-forward.html">前传：源起、战争史歌七部曲</a></li>
-							<li class="fragment"><a href="js-up.html">上卷：锋利的武器-jQuery</a></li>
-							<li class="fragment"><a href="js-down.html">下卷：大厦的基石-js</a></li>
-							<li class="fragment"><a href="js-back.html">后传：现代化js-ES7</a></li>
-							<li class="fragment"><a href="vue-tour.html">番外篇：Vue 入门之旅</a></li>
-						</ul>
-					</p>
+					<h1>未完待续，敬请期待！</h1>
 				</section>
 			</div>
 		</div>
