--- a/js-forward.html
+++ b/js-forward.html
@@ -1689,6 +1689,12 @@ Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrom
                         Hey, don't be shy.
                     </script>
                 </section>
+								<section style="text-align: left;">
+									<h1>THE END</h1>
+									<p>
+										参考链接太多，待列举
+									</p>
+								</section>
 			</div>
 		</div>
 
