--- a/js-forward.html
+++ b/js-forward.html
@@ -164,7 +164,7 @@
 - Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; en) Opera 9.51
 - Mozilla/5.0 (Windows NT 6.0; U; en; rv:1.8.1) Gecko/20061208 Firefox/2.0.0 Opera 9.51
 - Opera/9.51 (Windows NT 5.1; U; en)
-<small style="color:#1ab11d">狂暴模式，我有炫酷的易容术</small><!-- .element: class="fragment"-->
+<small style="color:#1ab11d">狂暴模式，我有炫酷的易容术</small>
 
 <section data-markdown>
 <script type="text/template">
@@ -176,11 +176,12 @@
 
 	<section data-markdown>
 	<script type="text/template">
-	Chrome:<!-- .element: class="fragment"-->
+	Chrome:
 - Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/525.13 (KHTML, like Gecko) Chrome/0.2.149.27 Safari/525.13
 <small style="color:#1ab11d">包含Safari，你懂的</small>
 	</script>
 	</section>
+	
 	<section data-markdown>
 	<script type="text/template">
 		## 战争格局
