--- a/js-forward.html
+++ b/js-forward.html
@@ -95,7 +95,7 @@
 ### 唐尧虞舜
 
 # *Mosaic*
-<small style="color:#1b91ff">大神就是大神，起名都不一般，我叫马赛克</small><!-- .element: class="fragment"-->
+<small style="color:#1b91ff">马赛克</small><!-- .element: class="fragment"-->
 
 - Nexus不支持显示图片<!-- .element: class="fragment"-->
 <small style="color:#1b91ff">无图无真相，导火索点燃</small><!-- .element: class="fragment"-->
@@ -108,14 +108,14 @@
 ### 楚汉争霸
 
 # *Mozilla*
-<small style="color:#1b91ff">避免法律纠纷，后又改名为Netscape Navigator(网景)</small><!-- .element: class="fragment"-->
+<small style="color:#1b91ff">Netscape Navigator(网景)</small><!-- .element: class="fragment"-->
 
 - 哥斯拉(Godzilla)谐音<!-- .element: class="fragment"-->
 <small style="color:#1b91ff">诚然是一头野心勃勃的怪兽</small><!-- .element: class="fragment"-->
 - ”Mosaic Killa”之意<!-- .element: class="fragment"-->
 <small style="color:#1b91ff">Killa是俚语中Killer的拼法，即“马赛克的终结者”，赤裸裸的挑战</small><!-- .element: class="fragment"-->
 - userAgent为Mozilla/1.0 (Win3.1)<!-- .element: class="fragment"-->
-<small style="color:#1b91ff">改名不改性</small><!-- .element: class="fragment"-->
+<small style="color:#1b91ff">以自己命名</small><!-- .element: class="fragment"-->
 </script>
 				</section>
 				<section data-markdown>
@@ -123,9 +123,9 @@
 ### 宋元之战
 
 # *IE*
-<small style="color:#1b91ff">命名直接，用途拍脸上，还要什么说明书</small><!-- .element: class="fragment"-->
+<small style="color:#1b91ff">Internet Explorer</small><!-- .element: class="fragment"-->
 - Mozilla/1.22 (compatible; MSIE 2.0; Windows 95)<!-- .element: class="fragment"-->
-<small style="color:#1b91ff">区区userAgent......</small><!-- .element: class="fragment"-->
+<small style="color:#1b91ff">userAgent之加法</small><!-- .element: class="fragment"-->
 </script>
 				</section>
 				<section data-markdown>
@@ -165,12 +165,14 @@
 - Mozilla/5.0 (Windows NT 6.0; U; en; rv:1.8.1) Gecko/20061208 Firefox/2.0.0 Opera 9.51
 - Opera/9.51 (Windows NT 5.1; U; en)
 <small style="color:#1ab11d">狂暴模式，我有炫酷的易容术</small>
-
+	</script>
+	</section>
+	
 <section data-markdown>
 <script type="text/template">
 	Safari:
 - Mozilla/5.0 (Macintosh; U; PPC Mac OS X; de-de) AppleWebKit/85.7 (KHTML, like Gecko)
-<small style="color:#1ab11d">Webkit的排版引擎叫WebCore，是KHTML衍生而来的，所以(KHTML, like Gecko)也继承过来了</small><!-- .element: class="fragment"-->
+<small style="color:#1ab11d">Webkit的排版引擎叫WebCore，是KHTML衍生而来的，所以(KHTML, like Gecko)也继承过来了</small>
 	</script>
 	</section>
 
@@ -219,7 +221,11 @@ Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrom
 <script type="text/template">
 	### 未来
 - userAgent标准：https://www.w3.org/TR/UAAG/
-- 星球崛起终<!-- .element: class="fragment" -->
+</script>
+</section>
+<section data-markdown>
+<script type="text/template">
+	# 星球崛起终
 </script>
 </section>
 				<!-- 第一纪 上古时期 -->
