--- a/min-program.html
+++ b/min-program.html
@@ -351,7 +351,7 @@
                         <script type="text-template">
                             pwa
 
-                            - 拥有桌面入口
+                            - A2HS：添加到桌面
                             - 推送：Notification API
                             - 离线缓存：Service Worker
 
