--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class="fragment"><a href="js-down.html">下卷：大厦的基石-js</a></li>
 							<li class="fragment"><a href="js-back.html">后传：现代化js-ES7</a></li>
 							<li class="fragment"><a href="vue-tour.html">番外篇：Vue 入门之旅</a></li>
-							<li class="fragment"><a href="min-program.html">番外篇：小程序</a></li>
+							<li class="fragment"><a href="mini-program.html">番外篇：小程序</a></li>
 						</ul>
 					</p>
 				</section>
