--- a/mini-program.html
+++ b/mini-program.html
@@ -56,7 +56,7 @@
                         </script>
                     </section>
                     <section>
-                        <img src="img/mini-program/wx-regist.jpeg" alt="" style="width: 360px;">
+                        <img src="img/wx-regist.jpeg" alt="" style="width: 360px;">
                     </section>
                 </section>
                 <section>
