--- a/mini-program.html
+++ b/mini-program.html
@@ -172,10 +172,10 @@
                         <script type="text-template">
                             ### [mpvue](https://github.com/Meituan-Dianping/mpvue)、[uni-app](https://uniapp.dcloud.io/)
 
-                            - 修改 vue的 runtime 和 compiler
-                            - vue技能树几乎全部点满
-                            - 2.0开始支持支付宝、百度、头条小程序（mpvue）
-                            - 7个月以上已无更新（mpvue）
+                            - 修改 vue的 runtime 和 compiler<!-- .element: class="fragment"-->
+                            - vue技能树几乎全部点满<!-- .element: class="fragment"-->
+                            - 2.0开始支持支付宝、百度、头条小程序（mpvue）<!-- .element: class="fragment"-->
+                            - 7个月以上已无更新（mpvue）<!-- .element: class="fragment"-->
 
                         </script>
                     </section>
@@ -183,10 +183,10 @@
                         <script type="text-template">
                             ### uni-app
 
-                            - h5+ -> nvue -> uni-app
-                            - app（h5+、weex）、h5、各种小程序（mpvue）、快应用
-                            - 借鉴C：#ifdef, #ifndef, #endif
-                            - hbuilder编辑器、插件市场
+                            - h5+ -> nvue -> uni-app<!-- .element: class="fragment"-->
+                            - app（h5+、weex）、h5、各种小程序（mpvue）、快应用<!-- .element: class="fragment"-->
+                            - 借鉴C：#ifdef, #ifndef, #endif<!-- .element: class="fragment"-->
+                            - hbuilder编辑器、插件市场<!-- .element: class="fragment"-->
 
                         </script>
                     </section>
@@ -194,11 +194,11 @@
                         <script type="text-template">
                             ### about
 
-                            - 小程序限制：wxml只能静态，需要预编译好
-                            - 动态组件不支持：component :is
-                            - 无状态组件不支持：functionnal: only render
-                            - 异步组件不支持：() => import
-                            - inline-templte, X-Templates
+                            - 小程序限制：wxml只能静态，需要预编译好<!-- .element: class="fragment"-->
+                            - 动态组件不支持：component :is<!-- .element: class="fragment"-->
+                            - 无状态组件不支持：functionnal: only render<!-- .element: class="fragment"-->
+                            - 异步组件不支持：() => import<!-- .element: class="fragment"-->
+                            - inline-templte, X-Templates<!-- .element: class="fragment"-->
 
                         </script>
                     </section>
@@ -223,10 +223,10 @@
                     <script type="text-template">
                         ### chameleon
 
-                        - 前辈们基于react/vue语法，wx小程序api，chameleon更激进
-                        - 自己的语法：CMSS, CML，自己的接口
-                        - 鼓励开发者将差异api封装成统一的接口
-                        - [多态协议](https://cmljs.org/doc/framework/polymorphism/api.html)
+                        - 前辈们基于react/vue语法，wx小程序api，chameleon更激进<!-- .element: class="fragment"-->
+                        - 自己的语法：CMSS, CML，自己的接口<!-- .element: class="fragment"-->
+                        - 鼓励开发者将差异api封装成统一的接口<!-- .element: class="fragment"-->
+                        - [多态协议](https://cmljs.org/doc/framework/polymorphism/api.html)<!-- .element: class="fragment"-->
 
                     </script>
                 </section>
@@ -271,6 +271,23 @@
                         attached	componentDidMount
                         ready	componentDidMount
                         detached	componentWillUnmount
+                        ```
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text-template">
+                        hooks
+                        
+                        ```
+                        useDidShow
+                        useDidHide
+                        usePullDownRefresh
+                        useReachBottom
+                        usePageScroll
+                        useResize
+                        useShareAppMessage
+                        useTabItemTap
+                        useRouter
                         ```
                     </script>
                 </section>
