--- a/mini-program.html
+++ b/mini-program.html
@@ -277,7 +277,7 @@
                 <section data-markdown>
                     <script type="text-template">
                         hooks
-                        
+
                         ```
                         useDidShow
                         useDidHide
@@ -380,9 +380,9 @@
                 <section style="text-align: left;">
                     <h1>THE END</h1>
                     <p>
-                        [src](https://github.com/Thyiad/tech-share)
-                        [reveal.js](https://github.com/hakimel/reveal.js)
-                        [docker](https://www.docker.com/)
+                        <a href="https://github.com/hakimel/reveal.js">reveal.js</a><br>
+                        <a href="https://github.com/Thyiad/tech-share">src</a><br>
+                        <a href="https://www.docker.com">docker</a>
                     </p>
                 </section>
             </div>
